--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
             <div class="form-group">
               <label for="encryptionSteps">Encryption Steps</label>
-              <ul id="encryptionSteps" class="steps-list"></ul>
+              <ul id="encryptionStepstext" class="steps-list"></ul>
             </div>
           </div>
           <div class="col-md-6">
@@ -166,7 +166,7 @@
                 <thead>
                   <tr>
                     <th>Plaintext</th>
-                    <!-- <th>Plaintext Alphabet Values</th> -->
+                    <th>Plaintext Alphabet Values</th>
                     <th>Key Adding All Values</th>
                     <th>Mod 26 Values</th>
                     <th>Ciphertext</th>
@@ -247,20 +247,24 @@
             let step1 = char;
             steps.push([step1]);
 
-            let keyAddingValue = charCode + key;
-            let step2 = keyAddingValue;
+            let plaintextvalue = charCode;
+            let step2 = plaintextvalue;
             steps[i + 2].push(step2);
+
+            let keyAddingValue = charCode + key;
+            let step3 = keyAddingValue;
+            steps[i + 2].push(step3);
 
             // Step 3: Apply modulo 26
             let mod26Value = keyAddingValue % 26;
-            let step3 = mod26Value;
-            steps[i + 2].push(step3);
+            let step4 = mod26Value;
+            steps[i + 2].push(step4);
 
             // Step 4: Convert back to letter
             let encryptedCharCode = mod26Value + 65;
             let encryptedChar = String.fromCharCode(encryptedCharCode);
-            let step4 = encryptedChar;
-            steps[i + 2].push(step4);
+            let step5 = encryptedChar;
+            steps[i + 2].push(step5);
 
             ciphertext += encryptedChar;
           } else {
@@ -287,18 +291,21 @@
           // Insert plaintext value
           let plaintextCell = row.insertCell();
           plaintextCell.textContent = steps[i][0];
+          // Insert plaintext value
+          let plaintextCellCharValue = row.insertCell();
+          plaintextCellCharValue.textContent = steps[i][1];
 
           // Insert key adding value
           let keyAddingCell = row.insertCell();
-          keyAddingCell.textContent = steps[i][1];
+          keyAddingCell.textContent = steps[i][2];
 
           // Insert modulo 26 value
           let mod26Cell = row.insertCell();
-          mod26Cell.textContent = steps[i][2];
+          mod26Cell.textContent = steps[i][3];
 
           // Insert encrypted character
           let encryptedCell = row.insertCell();
-          encryptedCell.textContent = steps[i][3];
+          encryptedCell.textContent = steps[i][4];
         }
       }
     </script>
