additive cipher done

--- a/additiveCipher/additiveIndex.html
+++ b/additiveCipher/additiveIndex.html
@@ -13,7 +13,7 @@
   </head>
   <body>
  
-
+<div class="additviecipher">
     <div class="cipher-section">
       <h1 class="text-center ciphertitile ">Additive Cipher </h1>
     </div>
@@ -168,6 +168,8 @@
         </div>
       </div>
   
+</div>
+
 </div>
     <script src="additiveScript.js"></script>
   </body>
