encrypt and depcrypted affine cipher

--- a/affineCipher/affineCipher.html
+++ b/affineCipher/affineCipher.html
@@ -57,10 +57,10 @@
                                     <tr>
                                         <th>Plaintext</th>
                                         <th>Plaintext Alphabet Values</th>
-                                        <th>Key Multiplying All Values</th>
-                                        <th>Key Adding Value</th>
+                                        <th>Key A Multiplying All Values</th>
+                                        <th>Key B Adding Value</th>
                                         <th>Mod 26 Values</th>
-                                        <th>Ciphertext</th>
+                                        <th>Encrypted Ciphertext</th>
                                     </tr>
                                 </thead>
                                 <tbody id="affineEncryptionTableBody">
@@ -105,10 +105,10 @@
                                     <tr>
                                         <th>Ciphertext</th>
                                         <th>Ciphertext Alphabet Values</th>
-                                        <th>Key Inverse Multiplying All Values</th>
-                                        <th>Key Subtracting Value</th>
+                                        <th>Chipher Value - Key B Subtracting </th>
+                                        <th>Inverse Key A Multiplying Value</th>
                                         <th>Mod 26 Values</th>
-                                        <th>Plaintext</th>
+                                        <th>Decrypted Plaintext</th>
                                     </tr>
                                 </thead>
                                 <tbody id="affineDecryptionTableBody">
