update additive cipher

--- a/additiveCipher/additiveIndex.html
+++ b/additiveCipher/additiveIndex.html
@@ -86,9 +86,9 @@
                     <tr>
                       <th>Plaintext</th>
                       <th>Plaintext Alphabet Values</th>
-                      <th>Key Adding All Values</th>
+                      <th>(Key + plaintext) Values</th>
                       <th>Mod 26 Values</th>
-                      <th>Ciphertext</th>
+                      <th>Encrypted Ciphertext</th>
                     </tr>
                   </thead>
                   <tbody id="encryptionTableBody">
@@ -153,9 +153,9 @@
                     <tr>
                       <th>Ciphertext</th>
                       <th>Ciphertext Alphabet Values</th>
-                      <th>Key Subtracting All Values</th>
+                      <th>(Key - ciphertext) Values</th>
                       <th>Mod 26 Values</th>
-                      <th>Plaintext</th>
+                      <th>Decrypted Plaintext</th>
                     </tr>
                   </thead>
                   <tbody id="decryptionTableBody">
