--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cipher Menu</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <div class="container">
+    <div class="menu">
+      <ul class="list-unstyled">
+        <li class="menu-item"><a href="./additiveCipher/additiveIndex.html" class="menu-link" data-cipher="additive">Additive Cipher</a></li>
+        <li class="menu-item"><a href="./multiplicativeCipher/multplicativeCipher.html" class="menu-link" data-cipher="multiplicative">Multiplicative Cipher</a></li>
+        <li class="menu-item"><a href="./affineCipher/affineCipher.html" class="menu-link" data-cipher="affine">Affine Cipher</a></li>
+        <li class="menu-item"><a href="./playfairCipher//playfairCipher.html" class="menu-link" data-cipher="playfair">Playfair Cipher</a></li>
+      </ul>
+    </div>
+  </div>
+ 
+</body>
+</html>
