--- a/multiplicativeCipher/multplicativeCipher.html
+++ b/multiplicativeCipher/multplicativeCipher.html
@@ -13,6 +13,11 @@
   </head>
   <body>
     <div class="additviecipher">
+      <div class="d-flex justify-content-center mt-5">
+        <a href="../index.html" class="btn btn-primary" role="button"
+          >Back Home</a
+        >
+      </div>
       <div class="cipher-section">
         <h1 class="text-center ciphertitile">Multiplicative Cipher</h1>
       </div>
