--- a/playfairCipher/playfairCipher.html
+++ b/playfairCipher/playfairCipher.html
@@ -32,7 +32,13 @@
   </head>
   <body>
     <div class="container">
+      <div class="d-flex justify-content-center mt-5">
+        <a href="../index.html" class="btn btn-primary" role="button"
+          >Back Home</a
+        >
+      </div>
       <h2>Playfair Cipher Visual Encryption</h2>
+
       <div class="form-group">
         <label for="keyword">Enter keyword:</label>
         <input type="text" class="form-control" id="keyword" />
